# vera

./: .env.example  .gitignore  Cargo.toml  README.md  bot_database.db  setup.sql
src/: main.rs
src/commands/: moderation.rs
src/moderation/: image.rs  message.rs  mod.rs
